Trying to fix spacing...
Padding, margin, top all unsuccessful.  Trying height.

--- a/styles.css
+++ b/styles.css
@@ -80,6 +80,5 @@ body{
 }
 
 #header{
-    padding-top:-2em;
-    padding-bottom:-2em;
+    height:10%;
 }
